--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "freetake",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://ssiul003.github.io/freetake/",
   "dependencies": {
     "cra-template": "1.2.0",
     "express": "^4.21.2",
@@ -16,6 +17,8 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
