--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,6 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mssql": "^11.0.1",
-    "nodemon": "^3.1.9",
-    "uuid": "^11.1.0"
+    "nodemon": "^3.1.9"
   }
 }
